src/objects/CT_User__c.object
<CustomObject>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CT User</label>
    <nameField>
        <label>Ct User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CT Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>